--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wallet-monitor",
     "version": "1.0.0",
-    "description": "A crypto-currency wallet monitoring and miner program for solo mining.",
+    "description": "A crypto-currency wallet monitoring program for solo mining.",
     "license": "GPL-3.0",
     "author": "Felix Brucker",
     "repository": {
@@ -10,6 +10,8 @@
     },
     "main": "index.js",
     "scripts": {
+        "eslint": "eslint .",
+        "eslint:fix": "eslint --fix .",
         "start": "node ."
     },
     "dependencies": {
@@ -17,5 +19,10 @@
     },
     "engines": {
         "node": ">=v7.6.0"
+    },
+    "devDependencies": {
+        "eslint": "^3.15.0",
+        "eslint-config-airbnb-base": "^11.1.0",
+        "eslint-plugin-import": "^2.2.0"
     }
 }
